[package]
name = "trust-dns-with-reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.27"
pin-project-lite = "0.2.13"
reqwest = { version = "0.11.20", features = ["stream", "rustls-tls", "rustls-tls-webpki-roots"], default-features = false }
trust-dns-resolver = "0.23.0"
